connector-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: connector
  name: connector
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: connector
